[gd_scene load_steps=28 format=3 uid="uid://r85m48hu68fe"]

[ext_resource type="Material" uid="uid://b64y6g61ojwx3" path="res://materials/botMat.tres" id="1_xr0vt"]
[ext_resource type="Script" path="res://scripts/bot_base.gd" id="1_xtjxf"]
[ext_resource type="ArrayMesh" uid="uid://cqnydra2y4gly" path="res://models/botBase.obj" id="2_o8n02"]
[ext_resource type="PackedScene" uid="uid://d2pf8pqkev1q1" path="res://scenes/components/hitbox_component.tscn" id="4_x8hve"]
[ext_resource type="PackedScene" uid="uid://bq8g11gl1b8h7" path="res://scenes/components/health_component.tscn" id="5_0lc3d"]
[ext_resource type="PackedScene" uid="uid://dipfrvy2wpuqd" path="res://scenes/components/store_component.tscn" id="6_jvn85"]
[ext_resource type="PackedScene" uid="uid://ockkm5h27mwu" path="res://scenes/components/button_3d_component.tscn" id="6_x0yq0"]
[ext_resource type="Script" path="res://scripts/resources/store_item.gd" id="8_mwfx6"]
[ext_resource type="Script" path="res://scripts/resources/upgrade.gd" id="9_06pfc"]
[ext_resource type="PackedScene" uid="uid://d35ye1a8215q4" path="res://scenes/components/spawner_component.tscn" id="9_wqfvm"]
[ext_resource type="PackedScene" uid="uid://c4nvawtptak0b" path="res://scenes/units/friendly/bot.tscn" id="10_81o3w"]
[ext_resource type="PackedScene" uid="uid://b2o2tm5xnowae" path="res://scenes/components/clickable_component.tscn" id="16_qpfqn"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_x5f7x"]
data = PackedVector3Array(1.8162, 0.0086, -4.3848, 1.7676, -1, -4.2679, 3.7122, 0, -3.7124, 3.7122, 0, -3.7124, 1.7676, -1, -4.2679, 3.5355, -1, -3.5356, 3.7122, 0, -3.7124, 3.5355, -1, -3.5356, 5.25, 0, -0.0001, 5.25, 0, -0.0001, 3.5355, -1, -3.5356, 4.9999, -1, -0.0001, 4.3847, 0.0086, 1.8162, 4.2677, -1, 1.7676, 3.7122, 0, 3.7122, 3.7122, 0, 3.7122, 4.2677, -1, 1.7676, 3.5355, -1, 3.5355, 3.7122, 0, 3.7122, 3.5355, -1, 3.5355, -0.0001, 0, 5.25, -0.0001, 0, 5.25, 3.5355, -1, 3.5355, -0.0001, -1, 4.9999, -1.8163, 0.0086, 4.3847, -1.7678, -1, 4.2677, -3.7124, 0, 3.7122, -3.7124, 0, 3.7122, -1.7678, -1, 4.2677, -3.5356, -1, 3.5355, -3.7124, 0, 3.7122, -3.5356, -1, 3.5355, -5.25, 0, -0.0001, -5.25, 0, -0.0001, -3.5356, -1, 3.5355, -5.0001, -1, -0.0001, -0.0001, 0.8, 4.9999, -1.7298, 0.7914, 4.1759, -0.0001, 1.0643, 4.7355, -0.0001, 1.0643, 4.7355, -1.7298, 0.7914, 4.1759, -1.6624, 1.0387, 4.0129, -4.3848, 0.0086, -1.8163, -4.2679, -1, -1.7678, -3.7124, 0, -3.7124, -3.7124, 0, -3.7124, -4.2679, -1, -1.7678, -3.5356, -1, -3.5356, -3.7124, 0, -3.7124, -3.5356, -1, -3.5356, -0.0001, 0, -5.25, -0.0001, 0, -5.25, -3.5356, -1, -3.5356, -0.0001, -1, -5.0001, -3.182, 0.4, -3.182, -0.0001, 0.4, -4.5, -1.9093, 0.9, -1.9093, -1.9093, 0.9, -1.9093, -0.0001, 0.4, -4.5, -0.0001, 0.9, -2.7001, -5.25, 0, -0.0001, -4.3848, 0.0086, -1.8163, -5.0001, 0.8, -0.0001, -5.0001, 0.8, -0.0001, -4.3848, 0.0086, -1.8163, -4.176, 0.7914, -1.7298, 3.7122, 0, -3.7124, 5.25, 0, -0.0001, 3.5355, 0.8, -3.5356, 3.5355, 0.8, -3.5356, 5.25, 0, -0.0001, 4.9999, 0.8, -0.0001, 3.5355, 0.8, 3.5355, -0.0001, 0.8, 4.9999, 3.3485, 1.0643, 3.3485, 3.3485, 1.0643, 3.3485, -0.0001, 0.8, 4.9999, -0.0001, 1.0643, 4.7355, 4.9999, 0.8, -0.0001, 4.1759, 0.7914, 1.7297, 4.7355, 1.0643, -0.0001, 4.7355, 1.0643, -0.0001, 4.1759, 0.7914, 1.7297, 4.0129, 1.0387, 1.6622, 3.7122, 0, 3.7122, -0.0001, 0, 5.25, 3.5355, 0.8, 3.5355, 3.5355, 0.8, 3.5355, -0.0001, 0, 5.25, -0.0001, 0.8, 4.9999, 3.5355, 0.8, -3.5356, 4.9999, 0.8, -0.0001, 3.3485, 1.0643, -3.3487, 3.3485, 1.0643, -3.3487, 4.9999, 0.8, -0.0001, 4.7355, 1.0643, -0.0001, -3.7124, 0, 3.7122, -5.25, 0, -0.0001, -3.5356, 0.8, 3.5355, -3.5356, 0.8, 3.5355, -5.25, 0, -0.0001, -5.0001, 0.8, -0.0001, -4.176, 0.7914, -1.7298, -3.5356, 0.8, -3.5356, -4.0131, 1.0387, -1.6624, -4.0131, 1.0387, -1.6624, -3.5356, 0.8, -3.5356, -3.3487, 1.0643, -3.3487, 1.7297, 0.7914, -4.176, 3.5355, 0.8, -3.5356, 1.6622, 1.0387, -4.0131, 1.6622, 1.0387, -4.0131, 3.5355, 0.8, -3.5356, 3.3485, 1.0643, -3.3487, -4.5, 0.4, -0.0001, -3.182, 0.4, 3.1819, -4.5, 0.9791, -0.0001, -4.5, 0.9791, -0.0001, -3.182, 0.4, 3.1819, -3.182, 0.9791, 3.1819, 3.1819, 0.4, 3.1819, 4.4999, 0.4, -0.0001, 3.1819, 0.9791, 3.1819, 3.1819, 0.9791, 3.1819, 4.4999, 0.4, -0.0001, 3.8409, 0.9791, 1.5909, 3.8409, 0.9791, 1.5909, 4.4999, 0.4, -0.0001, 4.4999, 0.9791, -0.0001, -0.0001, 0.4, -4.5, -3.182, 0.4, -3.182, -0.0001, 0.9791, -4.5, -0.0001, 0.9791, -4.5, -3.182, 0.4, -3.182, -3.182, 0.9791, -3.182, -0.0001, 0.4, 4.4999, 3.1819, 0.4, 3.1819, -0.0001, 0.9791, 4.4999, -0.0001, 0.9791, 4.4999, 3.1819, 0.4, 3.1819, 3.1819, 0.9791, 3.1819, -1.7298, 0.7914, 4.1759, -3.5356, 0.8, 3.5355, -1.6624, 1.0387, 4.0129, -1.6624, 1.0387, 4.0129, -3.5356, 0.8, 3.5355, -3.3487, 1.0643, 3.3485, 4.1759, 0.7914, 1.7297, 3.5355, 0.8, 3.5355, 4.0129, 1.0387, 1.6622, 4.0129, 1.0387, 1.6622, 3.5355, 0.8, 3.5355, 3.3485, 1.0643, 3.3485, -0.0001, 0, 5.25, -1.8163, 0.0086, 4.3847, -0.0001, 0.8, 4.9999, -0.0001, 0.8, 4.9999, -1.8163, 0.0086, 4.3847, -1.7298, 0.7914, 4.1759, -3.5356, 0.8, 3.5355, -5.0001, 0.8, -0.0001, -3.3487, 1.0643, 3.3485, -3.3487, 1.0643, 3.3485, -5.0001, 0.8, -0.0001, -4.7357, 1.0643, -0.0001, -5.0001, 0.8, -0.0001, -4.176, 0.7914, -1.7298, -4.7357, 1.0643, -0.0001, -4.7357, 1.0643, -0.0001, -4.176, 0.7914, -1.7298, -4.0131, 1.0387, -1.6624, 5.25, 0, -0.0001, 4.3847, 0.0086, 1.8162, 4.9999, 0.8, -0.0001, 4.9999, 0.8, -0.0001, 4.3847, 0.0086, 1.8162, 4.1759, 0.7914, 1.7297, -3.7124, 0, -3.7124, -0.0001, 0, -5.25, -3.5356, 0.8, -3.5356, -3.5356, 0.8, -3.5356, -0.0001, 0, -5.25, -0.0001, 0.8, -5.0001, -0.0001, 0, -5.25, 1.8162, 0.0086, -4.3848, -0.0001, 0.8, -5.0001, -0.0001, 0.8, -5.0001, 1.8162, 0.0086, -4.3848, 1.7297, 0.7914, -4.176, -3.5356, 0.8, -3.5356, -0.0001, 0.8, -5.0001, -3.3487, 1.0643, -3.3487, -3.3487, 1.0643, -3.3487, -0.0001, 0.8, -5.0001, -0.0001, 1.0643, -4.7357, 4.4999, 0.4, -0.0001, 3.1819, 0.4, -3.182, 4.4999, 0.9791, -0.0001, 4.4999, 0.9791, -0.0001, 3.1819, 0.4, -3.182, 3.1819, 0.9791, -3.182, -0.0001, 0.9, -2.7001, 1.9091, 0.9, -1.9093, -1.9093, 0.9, -1.9093, -1.9093, 0.9, -1.9093, 1.9091, 0.9, -1.9093, -2.7001, 0.9, -0.0001, -2.7001, 0.9, -0.0001, 1.9091, 0.9, -1.9093, -1.9093, 0.9, 1.9091, -1.9093, 0.9, 1.9091, 1.9091, 0.9, -1.9093, -0.0001, 0.9, 2.6999, -0.0001, 0.9, 2.6999, 1.9091, 0.9, -1.9093, 1.9091, 0.9, 1.9091, 1.9091, 0.9, 1.9091, 1.9091, 0.9, -1.9093, 2.6999, 0.9, -0.0001, -3.182, 0.4, 3.1819, -4.5, 0.4, -0.0001, -1.9093, 0.9, 1.9091, -1.9093, 0.9, 1.9091, -4.5, 0.4, -0.0001, -2.7001, 0.9, -0.0001, 3.1819, 0.4, 3.1819, -0.0001, 0.4, 4.4999, 1.9091, 0.9, 1.9091, 1.9091, 0.9, 1.9091, -0.0001, 0.4, 4.4999, -0.0001, 0.9, 2.6999, 3.1819, 0.4, -3.182, 4.4999, 0.4, -0.0001, 1.9091, 0.9, -1.9093, 1.9091, 0.9, -1.9093, 4.4999, 0.4, -0.0001, 2.6999, 0.9, -0.0001, -4.5, 0.4, -0.0001, -3.182, 0.4, -3.182, -2.7001, 0.9, -0.0001, -2.7001, 0.9, -0.0001, -3.182, 0.4, -3.182, -1.9093, 0.9, -1.9093, -0.0001, 0.4, 4.4999, -3.182, 0.4, 3.1819, -0.0001, 0.9, 2.6999, -0.0001, 0.9, 2.6999, -3.182, 0.4, 3.1819, -1.9093, 0.9, 1.9091, 4.4999, 0.4, -0.0001, 3.1819, 0.4, 3.1819, 2.6999, 0.9, -0.0001, 2.6999, 0.9, -0.0001, 3.1819, 0.4, 3.1819, 1.9091, 0.9, 1.9091, -0.0001, 0.4, -4.5, 3.1819, 0.4, -3.182, -0.0001, 0.9, -2.7001, -0.0001, 0.9, -2.7001, 3.1819, 0.4, -3.182, 1.9091, 0.9, -1.9093, 1.8162, 0.0086, -4.3848, 3.7122, 0, -3.7124, 1.7297, 0.7914, -4.176, 1.7297, 0.7914, -4.176, 3.7122, 0, -3.7124, 3.5355, 0.8, -3.5356, -0.0001, 0.8, -5.0001, 1.7297, 0.7914, -4.176, -0.0001, 1.0643, -4.7357, -0.0001, 1.0643, -4.7357, 1.7297, 0.7914, -4.176, 1.6622, 1.0387, -4.0131, -0.0001, 0, -5.25, -0.0001, -1, -5.0001, 1.8162, 0.0086, -4.3848, 1.8162, 0.0086, -4.3848, -0.0001, -1, -5.0001, 1.7676, -1, -4.2679, -1.8163, 0.0086, 4.3847, -3.7124, 0, 3.7122, -1.7298, 0.7914, 4.1759, -1.7298, 0.7914, 4.1759, -3.7124, 0, 3.7122, -3.5356, 0.8, 3.5355, -3.182, 0.4, -3.182, -4.5, 0.4, -0.0001, -3.182, 0.9791, -3.182, -3.182, 0.9791, -3.182, -4.5, 0.4, -0.0001, -3.841, 0.9791, -1.5911, -3.841, 0.9791, -1.5911, -4.5, 0.4, -0.0001, -4.5, 0.9791, -0.0001, -0.0001, 0, 5.25, -0.0001, -1, 4.9999, -1.8163, 0.0086, 4.3847, -1.8163, 0.0086, 4.3847, -0.0001, -1, 4.9999, -1.7678, -1, 4.2677, 4.3847, 0.0086, 1.8162, 3.7122, 0, 3.7122, 4.1759, 0.7914, 1.7297, 4.1759, 0.7914, 1.7297, 3.7122, 0, 3.7122, 3.5355, 0.8, 3.5355, -3.182, 0.4, 3.1819, -0.0001, 0.4, 4.4999, -3.182, 0.9791, 3.1819, -3.182, 0.9791, 3.1819, -0.0001, 0.4, 4.4999, -1.5911, 0.9791, 3.8409, -1.5911, 0.9791, 3.8409, -0.0001, 0.4, 4.4999, -0.0001, 0.9791, 4.4999, -4.3848, 0.0086, -1.8163, -3.7124, 0, -3.7124, -4.176, 0.7914, -1.7298, -4.176, 0.7914, -1.7298, -3.7124, 0, -3.7124, -3.5356, 0.8, -3.5356, -5.25, 0, -0.0001, -5.0001, -1, -0.0001, -4.3848, 0.0086, -1.8163, -4.3848, 0.0086, -1.8163, -5.0001, -1, -0.0001, -4.2679, -1, -1.7678, 5.25, 0, -0.0001, 4.9999, -1, -0.0001, 4.3847, 0.0086, 1.8162, 4.3847, 0.0086, 1.8162, 4.9999, -1, -0.0001, 4.2677, -1, 1.7676, -0.0001, 1.0643, -4.7357, 1.6622, 1.0387, -4.0131, -0.0001, 0.9791, -4.5, -0.0001, 0.9791, -4.5, 1.6622, 1.0387, -4.0131, 1.5909, 0.9791, -3.841, 3.3485, 1.0643, -3.3487, 4.7355, 1.0643, -0.0001, 3.1819, 0.9791, -3.182, 3.1819, 0.9791, -3.182, 4.7355, 1.0643, -0.0001, 4.4999, 0.9791, -0.0001, 4.7355, 1.0643, -0.0001, 4.0129, 1.0387, 1.6622, 4.4999, 0.9791, -0.0001, 4.4999, 0.9791, -0.0001, 4.0129, 1.0387, 1.6622, 3.8409, 0.9791, 1.5909, 3.3485, 1.0643, 3.3485, -0.0001, 1.0643, 4.7355, 3.1819, 0.9791, 3.1819, 3.1819, 0.9791, 3.1819, -0.0001, 1.0643, 4.7355, -0.0001, 0.9791, 4.4999, -0.0001, 1.0643, 4.7355, -1.6624, 1.0387, 4.0129, -0.0001, 0.9791, 4.4999, -0.0001, 0.9791, 4.4999, -1.6624, 1.0387, 4.0129, -1.5911, 0.9791, 3.8409, -3.3487, 1.0643, 3.3485, -4.7357, 1.0643, -0.0001, -3.182, 0.9791, 3.1819, -3.182, 0.9791, 3.1819, -4.7357, 1.0643, -0.0001, -4.5, 0.9791, -0.0001, -4.7357, 1.0643, -0.0001, -4.0131, 1.0387, -1.6624, -4.5, 0.9791, -0.0001, -4.5, 0.9791, -0.0001, -4.0131, 1.0387, -1.6624, -3.841, 0.9791, -1.5911, -3.3487, 1.0643, -3.3487, -0.0001, 1.0643, -4.7357, -3.182, 0.9791, -3.182, -3.182, 0.9791, -3.182, -0.0001, 1.0643, -4.7357, -0.0001, 0.9791, -4.5, 1.6622, 1.0387, -4.0131, 3.3485, 1.0643, -3.3487, 1.5909, 0.9791, -3.841, 1.5909, 0.9791, -3.841, 3.3485, 1.0643, -3.3487, 3.1819, 0.9791, -3.182, -1.6624, 1.0387, 4.0129, -3.3487, 1.0643, 3.3485, -1.5911, 0.9791, 3.8409, -1.5911, 0.9791, 3.8409, -3.3487, 1.0643, 3.3485, -3.182, 0.9791, 3.1819, 4.0129, 1.0387, 1.6622, 3.3485, 1.0643, 3.3485, 3.8409, 0.9791, 1.5909, 3.8409, 0.9791, 1.5909, 3.3485, 1.0643, 3.3485, 3.1819, 0.9791, 3.1819, -4.0131, 1.0387, -1.6624, -3.3487, 1.0643, -3.3487, -3.841, 0.9791, -1.5911, -3.841, 0.9791, -1.5911, -3.3487, 1.0643, -3.3487, -3.182, 0.9791, -3.182, 3.1819, 0.4, -3.182, -0.0001, 0.4, -4.5, 3.1819, 0.9791, -3.182, 3.1819, 0.9791, -3.182, -0.0001, 0.4, -4.5, 1.5909, 0.9791, -3.841, 1.5909, 0.9791, -3.841, -0.0001, 0.4, -4.5, -0.0001, 0.9791, -4.5)

[sub_resource type="Curve3D" id="Curve3D_ux5ql"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, 0, 0, 17.675, 0, 17.675, 0, 0, 0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, -17.675, 0, 17.675, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 0, 0, -17.675, 0, -17.675, 0, 0, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 17.675, 0, -17.675, 0, 0, 0, 0, 0, 0, 25, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 9

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mhkc5"]
height = 2.5
radius = 6.08608

[sub_resource type="ViewportTexture" id="ViewportTexture_uyrb3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Resource" id="Resource_n6bwm"]
resource_local_to_scene = true
script = ExtResource("9_06pfc")
name = "Spawn Rate"
max_level = 3
use_advanced_scaling = true
advanced_scaling = Array[float]([1.0, 1.25, 1.5])

[sub_resource type="Resource" id="Resource_rd6hp"]
resource_local_to_scene = true
script = ExtResource("8_mwfx6")
item = SubResource("Resource_n6bwm")
base_cost = 5
cost_multiplier = 1.5

[sub_resource type="Resource" id="Resource_quj6y"]
resource_local_to_scene = true
script = ExtResource("9_06pfc")
name = "Base Health"
max_level = 3
use_advanced_scaling = true
advanced_scaling = Array[float]([1.0, 1.5, 2.0])

[sub_resource type="Resource" id="Resource_ge0lg"]
resource_local_to_scene = true
script = ExtResource("8_mwfx6")
item = SubResource("Resource_quj6y")
base_cost = 5
cost_multiplier = 1.5

[sub_resource type="Resource" id="Resource_eytu2"]
resource_local_to_scene = true
script = ExtResource("9_06pfc")
name = "Base Heal Speed"
max_level = 3
use_advanced_scaling = true
advanced_scaling = Array[float]([1.0, 1.5, 2.0])

[sub_resource type="Resource" id="Resource_2ly8r"]
resource_local_to_scene = true
script = ExtResource("8_mwfx6")
item = SubResource("Resource_eytu2")
base_cost = 200
cost_multiplier = 1.5

[sub_resource type="Resource" id="Resource_5jd8x"]
resource_local_to_scene = true
script = ExtResource("9_06pfc")
name = "Unit Speed"
max_level = 3
use_advanced_scaling = true
advanced_scaling = Array[float]([1.0, 1.5, 2.0])

[sub_resource type="Resource" id="Resource_4arkv"]
resource_local_to_scene = true
script = ExtResource("8_mwfx6")
item = SubResource("Resource_5jd8x")
base_cost = 150
cost_multiplier = 1.5

[sub_resource type="Resource" id="Resource_7k0n1"]
resource_local_to_scene = true
script = ExtResource("9_06pfc")
name = "Unit Damage"
max_level = 3
use_advanced_scaling = false
advanced_scaling = Array[float]([])

[sub_resource type="Resource" id="Resource_sxsx8"]
resource_local_to_scene = true
script = ExtResource("8_mwfx6")
item = SubResource("Resource_7k0n1")
base_cost = 200
cost_multiplier = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kvsbc"]
height = 2.87802
radius = 5.69379

[node name="BotBase" type="StaticBody3D" node_paths=PackedStringArray("store_component", "health_component", "spawner_component") groups=["base_navigation_mesh_source_group", "bot_base"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_xtjxf")
store_component = NodePath("StoreComponent")
health_component = NodePath("HealthComponent")
spawner_component = NodePath("SpawnerComponent")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_xr0vt")
mesh = ExtResource("2_o8n02")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_x5f7x")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_ux5ql")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["base_navigation_mesh_source_group", "bot_base"] instance=ExtResource("4_x8hve")]
collision_layer = 8
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CylinderShape3D_mhkc5")

[node name="HealthComponent" parent="." instance=ExtResource("5_0lc3d")]
transform = Transform3D(2.5, 0, 0, 0, -1.09278e-07, 2.5, 0, -2.5, -1.09278e-07, 0, 0, 0)
texture = SubResource("ViewportTexture_uyrb3")
base_health = 30.0

[node name="Button3DComponent" parent="." instance=ExtResource("6_x0yq0")]
transform = Transform3D(7.07107, -6.09846, 3.57894, 0, 5.06139, 8.62452, -7.07107, -6.09846, 3.57894, 0, 1.78183, 0.702092)
collision_layer = 64
collision_mask = 0

[node name="StoreComponent" parent="." instance=ExtResource("6_jvn85")]
store_name = "Store"
currency = "Units"
maximum_purchases = 3
store_items = Array[ExtResource("8_mwfx6")]([SubResource("Resource_rd6hp"), SubResource("Resource_ge0lg"), SubResource("Resource_2ly8r"), SubResource("Resource_4arkv"), SubResource("Resource_sxsx8")])

[node name="SpawnerComponent" parent="." instance=ExtResource("9_wqfvm")]
spawn_object = ExtResource("10_81o3w")

[node name="ClickableComponent" parent="." instance=ExtResource("16_qpfqn")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClickableComponent"]
shape = SubResource("CylinderShape3D_kvsbc")

[connection signal="can_heal" from="HealthComponent" to="." method="_on_health_component_can_heal"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="pressed" from="Button3DComponent" to="." method="_on_button_3d_component_pressed"]
[connection signal="object_spawned" from="SpawnerComponent" to="." method="_on_spawner_component_object_spawned"]
[connection signal="pressed" from="ClickableComponent" to="." method="_on_clickable_component_pressed"]
[connection signal="released" from="ClickableComponent" to="." method="_on_clickable_component_released"]
